--- a/src/Kooco.Pikachu.Blazor/Pages/DeliveryTemperatureCosts/DeliveryTemperatureCost.razor
+++ b/src/Kooco.Pikachu.Blazor/Pages/DeliveryTemperatureCosts/DeliveryTemperatureCost.razor
@@ -33,7 +33,7 @@
     }
 </style>
 
-<h3>@L["Delivery By Store Settings"]</h3>
+<h3>@L["DeliveryByStoreSettings"]</h3>
 
 <Card>
     <CardBody>
@@ -41,7 +41,7 @@
         {
             <Div Class="row mb-3 ">
                 <Div Class="col-1 text-lg-start normalLabel">
-                    <Label>@(item.Temperature.ToString())</Label>
+                    <Label>@L[item.Temperature.ToString()]</Label>
                 </Div>
                 <Div hidden>
                     <Select Disabled 
