--- a/src/Kooco.Pikachu.Blazor/Pages/Orders/OrderDetails.razor
+++ b/src/Kooco.Pikachu.Blazor/Pages/Orders/OrderDetails.razor
@@ -966,76 +966,75 @@
                                         {
                                             <tr>
                                                 <td class="text-start" style="width: 50%;">
-                                            @if (item.ItemType is ItemType.Item)
-                                            {
-                                                string? firstImage = item.Item?.Images?.FirstOrDefault()?.ImageUrl;
-                                                
-                                                @if (!string.IsNullOrEmpty(firstImage))
-                                                {
-                                                    <img src="@firstImage" class="img-fluid me-2" style="height: 50px; width: auto;" />
-                                                }
-                                                @item.Item?.ItemName
-                                            }
-
-                                            @if (item.ItemType is ItemType.SetItem)
-                                            {
-                                                string? firstImage = item.SetItem?.Images?.FirstOrDefault()?.ImageUrl;
-                                                
-                                                <Div>
-                                                    @if (!string.IsNullOrEmpty(firstImage))
+                                                    @if (item.ItemType is ItemType.Item)
                                                     {
-                                                        <img src="@firstImage" class="img-fluid me-2" style="height: 50px; width: auto;" />
+                                                        string? firstImage = item.Item?.Images?.FirstOrDefault()?.ImageUrl;
+                                                        
+                                                        @if (!string.IsNullOrEmpty(firstImage))
+                                                        {
+                                                            <img src="@firstImage" class="img-fluid me-2" style="height: 50px; width: auto;" />
+                                                        }
+                                                        @item.Item?.ItemName
                                                     }
-                                                    @item.SetItem?.SetItemName
-                                                </Div>
-                                            }
 
-                                            @if (item.ItemType is ItemType.Freebie)
-                                            {
-                                                string? firstImage = item.Freebie?.Images?.FirstOrDefault()?.ImageUrl;
-                                                
-                                                @if (!string.IsNullOrEmpty(firstImage))
-                                                {
-                                                    <img src="@firstImage" class="img-fluid me-2" style="height: 50px; width: auto;" />
-                                                }
-                                                @item.Freebie?.ItemName
-                                            }
+                                                    @if (item.ItemType is ItemType.SetItem)
+                                                    {
+                                                        string? firstImage = item.SetItem?.Images?.FirstOrDefault()?.ImageUrl;
+                                                        
+                                                        <Div>
+                                                            @if (!string.IsNullOrEmpty(firstImage))
+                                                            {
+                                                                <img src="@firstImage" class="img-fluid me-2" style="height: 50px; width: auto;" />
+                                                            }
+                                                            @item.SetItem?.SetItemName
+                                                        </Div>
+                                                    }
 
-                                        </td>
+                                                    @if (item.ItemType is ItemType.Freebie)
+                                                    {
+                                                        string? firstImage = item.Freebie?.Images?.FirstOrDefault()?.ImageUrl;
+                                                        
+                                                        @if (!string.IsNullOrEmpty(firstImage))
+                                                        {
+                                                            <img src="@firstImage" class="img-fluid me-2" style="height: 50px; width: auto;" />
+                                                        }
+                                                        @item.Freebie?.ItemName
+                                                    }
+                                                </td>
                                                 @if (item.IsSelected && IsItemsEditMode)
-                                        {
-                                            var thisItem = EditingItems.FirstOrDefault(e => e.Id == item.Id);
-                                            @if (thisItem != null)
-                                            {
-                                                <td>
-                                                    <input type="number" min="1" class="form-control form-control-sm @(thisItem.IsQuantiyError ? "invalid" : "")" @bind-value="thisItem.Quantity" @onblur="() => CalculateTotal(thisItem)" />
-                                                </td>
-                                                <td>
-                                                    <input type="number" min="1" class="form-control form-control-sm @(thisItem.IsItemPriceError ? "invalid" : "")" @bind-value="thisItem.ItemPrice" @onblur="() => CalculateTotal(thisItem)" />
-                                                </td>
-                                                <td>
-                                                    $@thisItem.TotalAmount.ToString("N2")
-                                                </td>
-                                            }
-                                        }
+                                                {
+                                                    var thisItem = EditingItems.FirstOrDefault(e => e.Id == item.Id);
+                                                    @if (thisItem != null)
+                                                    {
+                                                        <td>
+                                                            <input type="number" min="1" class="form-control form-control-sm @(thisItem.IsQuantiyError ? "invalid" : "")" @bind-value="thisItem.Quantity" @onblur="() => CalculateTotal(thisItem)" />
+                                                        </td>
+                                                        <td>
+                                                            <input type="number" min="1" class="form-control form-control-sm @(thisItem.IsItemPriceError ? "invalid" : "")" @bind-value="thisItem.ItemPrice" @onblur="() => CalculateTotal(thisItem)" />
+                                                        </td>
+                                                        <td>
+                                                            $@thisItem.TotalAmount.ToString("N2")
+                                                        </td>
+                                                    }
+                                                }
                                                 else
-                                        {
-                                            <td>
-                                                @L[item.DeliveryTemperature.ToString()]
-                                            </td>
-                                            <td>
-                                                @item.DeliveryTemperatureCost
-                                            </td>
-                                            <td>
-                                                @item.Quantity
-                                            </td>
-                                            <td>
-                                                <span>$@item.ItemPrice.ToString("N2")</span>
-                                            </td>
-                                            <td>
-                                                $@item.TotalAmount.ToString("N2")
-                                            </td>
-                                        }
+                                                {
+                                                    <td>
+                                                        @L[item.DeliveryTemperature.ToString()]
+                                                    </td>
+                                                    <td>
+                                                        @item.DeliveryTemperatureCost
+                                                    </td>
+                                                    <td>
+                                                        @item.Quantity
+                                                    </td>
+                                                    <td>
+                                                        <span>$@item.ItemPrice.ToString("N2")</span>
+                                                    </td>
+                                                    <td>
+                                                        $@((item.TotalAmount + item.DeliveryTemperatureCost).ToString("N2"))
+                                                    </td>
+                                                }
                                             </tr>
 
                                             if (item.ItemType is ItemType.SetItem &&
@@ -1067,6 +1066,16 @@
                                                 }
                                             }
                                         }
+                                        <tr>
+                                            <td class="text-center" style="width: 50%;" />
+                                            <td class="text-center" style="width: 10%;">Total</td>
+                                            <td class="text-center" style="width: 10%;" />
+                                            <td class="text-center" style="width: 10%;" />
+                                            <td class="text-center" style="width: 10%;" />
+                                            <td>
+                                                $@((context.Items.Sum(s => s.TotalAmount) + context.Items.Sum(s => s.DeliveryTemperatureCost)).ToString("N2"))
+                                            </td>
+                                        </tr>
                                     }
                                 </tbody>
                             </table>
