--- a/src/Kooco.Pikachu.Blazor/Pages/Refunds/Refund.razor
+++ b/src/Kooco.Pikachu.Blazor/Pages/Refunds/Refund.razor
@@ -52,9 +52,15 @@
                     </DisplayTemplate>
                  </DataGridColumn>
                     <DataGridColumn TItem="RefundDto"
-                                    Caption="@L["ParentOrderNo"]">
+                                    Caption="@L["MerchantTradeNo"]">
                         <DisplayTemplate>
                             @context.Order.MerchantTradeNo
+                        </DisplayTemplate>
+                    </DataGridColumn>
+                    <DataGridColumn TItem="RefundDto"
+                                    Caption="@L["TradeNo"]">
+                        <DisplayTemplate>
+                            @context.Order.TradeNo
                         </DisplayTemplate>
                     </DataGridColumn>
                  <DataGridColumn TItem="RefundDto"
